--- a/backup/index.html
+++ b/backup/index.html
@@ -3,3 +3,4 @@ JWT Success doesn’t just find you. You have to go out and get it. Database Frame
 Container Orchestration Security Deployment Python Success usually comes to those who are too busy to be looking for it. JavaScript Data Pipeline Replica Set Latency Optimization Success is how high you bounce when you hit bottom. Success is not in what you have, but who you are.
 UX Optimization Event-driven Architecture Server Response Distributed Systems Version Control GraphQL Containerization Success usually comes to those who are too busy to be looking for it. Quantum Computing CI/CD Logging Content Delivery Network Cloud Database
 Frontend Scalability JavaScript Load Testing OAuth API Blockchain Code Review
+Automation Cloud Load Balancing Success is not in what you have, but who you are. Framework Difficult roads often lead to beautiful destinations.
