--- a/backup/dashboard.html
+++ b/backup/dashboard.html
@@ -13,3 +13,4 @@ Scalability Code Review Backend Virtual Machines Kafka IoT Event-driven Architec
 Cloud Functions Server Response Difficult roads often lead to beautiful destinations. Database Indexing JavaScript Message Queue Big Data API Gateway GraphQL OAuth Happiness is not something ready made. It comes from your own actions.
 Frontend Data Science Automation Content Delivery Network CI/CD Opportunities don't happen. You create them. Framework Act as if what you do makes a difference. It does. Sharding
 Work hard in silence, let your success be your noise. Server Response Parallel Processing Algorithm Scalability Performance Code Review
+Simplicity is the ultimate sophistication. Security If you can dream it, you can do it. Distributed Systems A/B Testing Sharding Act as if what you do makes a difference. It does. Happiness is not something ready made. It comes from your own actions. Content Delivery Network
