--- a/backup/dashboard.html
+++ b/backup/dashboard.html
@@ -12,3 +12,4 @@ WebSockets Version Control Cloud Functions Pull Request Act as if what you do ma
 Scalability Code Review Backend Virtual Machines Kafka IoT Event-driven Architecture Testing Neural Networks I find that the harder I work, the more luck I seem to have. Success is not in what you have, but who you are.
 Cloud Functions Server Response Difficult roads often lead to beautiful destinations. Database Indexing JavaScript Message Queue Big Data API Gateway GraphQL OAuth Happiness is not something ready made. It comes from your own actions.
 Frontend Data Science Automation Content Delivery Network CI/CD Opportunities don't happen. You create them. Framework Act as if what you do makes a difference. It does. Sharding
+Work hard in silence, let your success be your noise. Server Response Parallel Processing Algorithm Scalability Performance Code Review
