--- a/backup/dashboard.html
+++ b/backup/dashboard.html
@@ -10,3 +10,4 @@ Logging Success is how high you bounce when you hit bottom. If you can dream it,
 Act as if what you do makes a difference. It does. Pull Request API Gateway Container Orchestration Stay hungry, stay foolish. Containerization Agile Database Algorithm Security Blockchain
 WebSockets Version Control Cloud Functions Pull Request Act as if what you do makes a difference. It does. Kubernetes Performance Agile Work hard in silence, let your success be your noise.
 Scalability Code Review Backend Virtual Machines Kafka IoT Event-driven Architecture Testing Neural Networks I find that the harder I work, the more luck I seem to have. Success is not in what you have, but who you are.
+Cloud Functions Server Response Difficult roads often lead to beautiful destinations. Database Indexing JavaScript Message Queue Big Data API Gateway GraphQL OAuth Happiness is not something ready made. It comes from your own actions.
