--- a/backup/dashboard.html
+++ b/backup/dashboard.html
@@ -8,3 +8,4 @@ Difficult roads often lead to beautiful destinations. Pull Request JWT JavaScrip
 RabbitMQ Agile Cloud Functions Replica Set Framework Optimization CI/CD Python A/B Testing Data Science
 Logging Success is how high you bounce when you hit bottom. If you can dream it, you can do it. Database OAuth Code Review Success is not in what you have, but who you are. Happiness is not something ready made. It comes from your own actions. Replica Set Database Indexing API Gateway Parallel Processing
 Act as if what you do makes a difference. It does. Pull Request API Gateway Container Orchestration Stay hungry, stay foolish. Containerization Agile Database Algorithm Security Blockchain
+WebSockets Version Control Cloud Functions Pull Request Act as if what you do makes a difference. It does. Kubernetes Performance Agile Work hard in silence, let your success be your noise.
