--- a/backup/dashboard.html
+++ b/backup/dashboard.html
@@ -7,3 +7,4 @@ Code Review Difficult roads often lead to beautiful destinations. Server Respons
 Difficult roads often lead to beautiful destinations. Pull Request JWT JavaScript Innovation distinguishes between a leader and a follower. Sharding Backend NLP Database Event Sourcing Optimization OAuth Code Review
 RabbitMQ Agile Cloud Functions Replica Set Framework Optimization CI/CD Python A/B Testing Data Science
 Logging Success is how high you bounce when you hit bottom. If you can dream it, you can do it. Database OAuth Code Review Success is not in what you have, but who you are. Happiness is not something ready made. It comes from your own actions. Replica Set Database Indexing API Gateway Parallel Processing
+Act as if what you do makes a difference. It does. Pull Request API Gateway Container Orchestration Stay hungry, stay foolish. Containerization Agile Database Algorithm Security Blockchain
