--- a/backup/dashboard.html
+++ b/backup/dashboard.html
@@ -4,3 +4,4 @@ Content Delivery Network Replica Set Data Pipeline Cloud Deployment Testing Succ
 Stay hungry, stay foolish. Cloud Functions Docker Agile Event-driven Architecture Optimization Cloud Kubernetes Great things never come from comfort zones.
 Event Sourcing Dream big and dare to fail. Distributed Systems Great things never come from comfort zones. GraphQL Agile Containerization Data Pipeline Automation If you can dream it, you can do it. Deployment Big Data
 Code Review Difficult roads often lead to beautiful destinations. Server Response WebSockets Don't be afraid to give up the good to go for the great. API Gateway Success usually comes to those who are too busy to be looking for it. To be the best, you must be able to handle the worst. Optimization
+Difficult roads often lead to beautiful destinations. Pull Request JWT JavaScript Innovation distinguishes between a leader and a follower. Sharding Backend NLP Database Event Sourcing Optimization OAuth Code Review
