--- a/backup/dashboard.html
+++ b/backup/dashboard.html
@@ -1,2 +1,3 @@
 Automation CI/CD Security Framework Parallel Processing
 Work hard in silence, let your success be your noise. Difficult roads often lead to beautiful destinations. Dream big and dare to fail. Backend Container Orchestration Happiness is not something ready made. It comes from your own actions. API Testing Kafka Blockchain Security Firewalls JavaScript Optimization Innovation distinguishes between a leader and a follower.
+Content Delivery Network Replica Set Data Pipeline Cloud Deployment Testing Success usually comes to those who are too busy to be looking for it. Load Testing Automation Backend Happiness is not something ready made. It comes from your own actions. Pull Request Innovation distinguishes between a leader and a follower.
